--- a/package.json
+++ b/package.json
@@ -3,18 +3,29 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
+    "@fortawesome/fontawesome-svg-core": "^1.2.34",
+    "@fortawesome/free-brands-svg-icons": "^5.15.2",
+    "@fortawesome/free-regular-svg-icons": "^5.15.2",
+    "@fortawesome/free-solid-svg-icons": "^5.15.2",
+    "@fortawesome/react-fontawesome": "^0.1.14",
+    "bootstrap": "^4.6.0",
+    "emojis": "^1.0.10",
+    "node-sass": "^4.13.1",
     "react": "^17.0.1",
+    "react-app-polyfill": "^1.0.5",
     "react-dom": "^17.0.1",
+    "react-fontawesome": "^1.7.1",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.0.1"
+    "reactstrap": "^5.0.0-beta.3",
+    "video-react": "^0.10.5"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -22,6 +33,9 @@
       "react-app",
       "react-app/jest"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^1.2.0"
   },
   "browserslist": {
     "production": [
