--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^17.0.1",
     "react-fontawesome": "^1.7.1",
     "react-helmet": "^6.1.0",
+    "react-light-accordion": "^0.1.4",
     "react-router-dom": "^5.1.2",
     "react-scripts": "4.0.3",
     "reactstrap": "^5.0.0-beta.3",
