--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
+  "homepage": "/lm-personal-site-static-react",
   "eslintConfig": {
     "extends": [
       "react-app",
